# WinAudioLEDReact

./: CMakeLists.txt  CMakePresets.json  ReadMe.md
src/: AdvancedAudioProcessor.cpp  AdvancedAudioProcessor.h  AudioCapture.cpp  AudioCapture.h  AudioProcessor.cpp  AudioProcessor.h  BarsWidget.cpp  BarsWidget.h  MainWindow.cpp  MainWindow.h  MultiResolutionVisualizerWidget.cpp  MultiResolutionVisualizerWidget.h  SnapShotManager.h  Snapshot.h  SnapshotManager.cpp  SnapshotViewer.cpp  SnapshotViewer.h  UDPSrSender.h  miniaudio_impl.cpp
